# CodePilot-AI

./: .dockerignore  .gitignore  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  Dockerfile.railway  LICENSE  README.md  docker-compose.yml  railway.toml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260717_001_create_auth_tables.py  20260717_002_create_repository_tables.py  20260717_003_create_repository_analysis_table.py  20260717_004_create_repository_summary_table.py  20260718_005_create_repository_chat_indexes.py  20260718_006_create_repository_code_reviews.py  20260718_007_create_refactor_proposals.py  20260718_008_create_generated_tests.py  20260718_009_create_repository_documentation.py
apps/api/src/codepilot_api/: __init__.py  main.py
apps/api/src/codepilot_api/application/auth/: __init__.py  contracts.py  service.py
apps/api/src/codepilot_api/config/: settings.py
apps/api/src/codepilot_api/domain/: __init__.py
apps/api/src/codepilot_api/infrastructure/: __init__.py
apps/api/src/codepilot_api/presentation/: dependencies.py  errors.py
apps/api/tests/: conftest.py  test_auth.py  test_code_explanations.py  test_code_reviews.py  test_gemini_adapters.py  test_health.py  test_ollama_adapters.py  test_openai_project_summary_agent.py  test_project_summaries.py  test_refactoring_advisor.py  test_repositories.py  test_repository_chat.py  test_repository_intelligence.py  test_settings.py  test_test_generation.py
(+180 files in other folders)
