[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilot-api"
version = "0.1.0"
description = "CodePilot AI backend API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "openai>=2.0,<3.0",
    "pwdlib[argon2]>=0.3,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "PyJWT>=2.10,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "qdrant-client>=1.13,<2.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["codepilot_api"]
